 - Make it possible to compile without PETSc (--disable-petsc)
 - Much improved ODE solvers
 - Complete multi-adaptive benchmarks reaction and wave
 - Assmeble boundary integrals
 - FEM class cleaned up.
 - Fix multi-adaptive benchmark problem reaction
 - Small fixes for Intel C++ compiler version 9.1
 - Test for Intel C++ compiler and configure appropriately
 - Add new classes DenseMatrix and DenseVector (wrappers for ublas)
 - Fix bug in conversion from Gmsh format
0.6.1 [2006-03-28]
 - Regenerate build system in makedist script
 - Update for new FFC syntax: BasisFunction --> TestFunction, TrialFunction
 - Fixes for conversion script dolfin-convert
 - Initial cleanups and fixes for ODE solvers
 - Numerous small fixes to improve portability
 - Remove dolfin:: qualifier on output << in Parameter.h
 - Don't use anonymous classes in demos, gives errors with some compilers
 - Remove KrylovSolver::solver()
 - Fix bug in convection-diffusion demo (boundary condition for pressure), use direct solver
 - LinearPDE and NewonSolver use umfpack LU solver by default (if available) when doing direct solve
 - Set PETSc matrix type through Matrix constructor 
 - Allow linear solver and preconditioner type to be passed to NewtonSolver 
 - Fix bug in Stokes demos (wrong boundary conditions)
 - Cleanup Krylov solver
 - Remove KrylovSolver::setPreconditioner() etc. and move to constructors
 - Remove KrylovSolver::setRtol() etc. and replace with parameters
 - Fix remaining name changes: noFoo() --> numFoo()
 - Add Cahn-Hilliard equation demo
 - NewtonSolver option to use residual or incremental convergence criterion
 - Add separate function to nls to test for convergence of Newton iterations
 - Fix bug in dolfin-config (wrong version number)
0.6.0 [2006-03-01]
 - Fix bug in XML output format (writing multiple objects)
 - Fix bug in XML matrix output format (handle zero rows)
 - Add new nonlinear PDE demo 
 - Restructure PDE class to use envelope-letter design